search bar on mobile, category home and button outline fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,6 +23,10 @@ body {
 
 /* basic Ends */
 
+button:focus{
+    border: none;
+    outline: none;
+}
 /* Kit Image Starts */
 
 .kitImage img {
@@ -3127,81 +3131,6 @@ blockquote p {
 
 /* Navbar Starts  */
 
-nav {
-    background-color: #eeecec;
-    padding: 0px !important;
-    /* position:fixed !important;
-    width:100% !important;
-    top:0px;
-    z-index:1000; */
-}
-
-.navbar-brand {
-    text-align: center;
-    clip-path: polygon(0% 0%, 100% 0%, 68% 100%, 0% 100%);
-    -webkit-clip-path: polygon(0% 0%, 100% 0%, 68% 100%, 0% 100%);
-    background-color: white;
-    padding-right: 40px;
-    margin-top: 0px;
-    margin-top: -20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-bottom: -8px;
-}
-
-.logoImage img {
-    width: 90%;
-}
-
-.wholeLinks {
-    display: flex;
-}
-
-.wholeLinks li {
-    margin: 0px 20px;
-    color: #051026 !important;
-}
-
-.wholeLinks li a {
-    color: #051026;
-    font-size: 12.5px;
-    font-weight: bold;
-}
-
-.wholeLinks li a:hover {
-    text-decoration: none;
-    color: #051026;
-}
-
-.allIcons {
-    display: flex;
-    background-color: white;
-    justify-content: space-evenly;
-    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 66% 122%, 91% 100%, 19% 100%, -18% 20%, -8% -21%);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 66% 122%, 91% 100%, 19% 100%, -18% 20%, -8% -21%);
-}
-
-.allIcons li a {
-    color: #051026;
-}
-
-.allIcons li {
-    margin: 22px 20px;
-}
-
-.allIcons li a:hover {
-    text-decoration: none;
-    color: #051260;
-}
-
-.allIcons i {
-    color: #051260;
-}
-
-nav .lists {
-    margin-bottom: -14.5px;
-}
-
 /* Navbar Ends  */
 
 .opacityLow {
@@ -4061,7 +3990,6 @@ nav .lists {
 .navbar {
     background-color: white;
 }
-
 .landing-carousel {
     min-height: 90vh;
 }
@@ -4117,26 +4045,6 @@ nav .lists {
     padding: 20px;
 }
 
-.subNav {
-    background-color: #051026;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 2.6vw;
-}
-
-.subNav a {
-    text-decoration: none;
-    margin-top: 10px;
-    color: white;
-    font-size: 12px;
-    font-family: 'Open Sans';
-    font-weight: 600;
-}
-
-.subNav a:hover {
-    color: rgb(165, 162, 162);
-}
 
 .landing-carousel .owl-dots {
     display: none;
@@ -4181,6 +4089,19 @@ nav .lists {
 /* new header */
 
 /* Navbar css*/
+.mobile-search-bar{
+    display: none;
+}
+@media (max-width: 1000px) {
+    .mobile-search-bar{
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+    }
+    .mobile-hide{
+        display: none;
+    }
+}
 
 nav {
     background-color: white;
@@ -4191,17 +4112,74 @@ nav {
     z-index:1000; */
 }
 
+nav navbar{
+    background-color: white;
+    padding: 0px !important;
+    position: absolute !important;
+    width:100% !important;
+    top:0px;
+    z-index:1000;
+}
+
 .navbar-brand {
     text-align: center;
-    clip-path: polygon(0% 0%, 100% 0%, 68% 100%, 0% 100%);
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 68% 100%, 0% 100%);
     background-color: white;
     padding-right: 40px;
+    padding-left: 1.2em;
     margin-top: 0px;
     margin-top: -20px;
     padding-top: 20px;
     padding-bottom: 20px;
     margin-bottom: -8px;
+}
+.sidebar {
+    height: 100%; 
+    width: 70vw; 
+    position: fixed; 
+    z-index: 100; 
+    top: 0; 
+    left: 0;
+    background-color: white; 
+    overflow-x: hidden; 
+    font-family: 'open sans';
+    font-weight: 600;
+  }
+.sidebar li {
+    padding: 0.7em 1.5em;
+    list-style-type: none;
+}
+.sidebar ul {
+    margin: 1em;
+}
+#cat{
+    position: absolute;
+    top:20vh;
+    left:5vw;
+}
+#category-menu {
+    display: flex;
+    width: max-content;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.dropdown-menu {
+    padding: 0;
+    border-radius: 0;
+    margin-top:1em;
+}
+#category-menu > div {
+    padding: 10px;
+}
+#category-menu > div:nth-child(2){
+    background-color: #F7F7F7;
+}
+#category-menu p{
+    margin-bottom: 5px;
+    padding-right: 2em; 
+}
+#category-menu h4 {
+    margin: 1em 0;
+    font-weight:bold;
 }
 
 .logoImage img {
@@ -4234,7 +4212,6 @@ nav {
     list-style: none;
     background-color: white;
     justify-content: space-evenly;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 66% 122%, 91% 100%, 19% 100%, -18% 20%, -8% -21%);
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 66% 122%, 91% 100%, 19% 100%, -18% 20%, -8% -21%);
 }
 
@@ -4263,17 +4240,32 @@ nav {
     right: 0px;
     font-weight: 500;
 }
+.allIcons .total-cart-items {
+    color: white;
+    background-color: #051026;
+    padding: 1px 4px;
+    border-radius: 50%;
+    right: 0px;
+    font-weight: 500;
+    font-size: 12px;
+    /* margin-bottom: 10px; */
+    /* margin-top: -10px; */
+    position: relative;
+    bottom: 10px;
+}
 
 nav .lists {
     margin-bottom: -14.5px;
 }
+
 
 .subNav {
     background-color: #051026;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    min-height: 5vh;
+    min-height: 2.6vw;
+    font-weight: bold;
 }
 
 .subNav a {
@@ -4285,6 +4277,32 @@ nav .lists {
 
 .subNav a:hover {
     color: rgb(165, 162, 162);
+}
+
+#mobile-navbar {
+    display: none;
+}
+#mobile-navbar + .subNav {
+    display: none;
+}
+
+@media (max-width: 1000px) {
+    #mobile-navbar {
+        display: flex;
+    }
+    #mobile-navbar + .subNav {
+        display: flex;
+    }
+    #mainNavbar {
+        display: none;
+    }
+    #mainNavbar + .subNav {
+        display: none;
+    }
+    .subNav {
+        overflow-x: scroll;
+        
+    }
 }
 
 /* @media(max-width: 700px) {
@@ -4698,5 +4716,5 @@ blockquote p {
 #cat{
     position: absolute;
     top:20vh;
-    left:5vw;
+    left:0px;
 }
