--- a/assets/css/payment.css
+++ b/assets/css/payment.css
@@ -760,30 +760,7 @@ blockquote p {
     top:20vh;
     left:5vw;
 }
-#category-menu {
-    display: flex;
-    width: max-content;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.dropdown-menu {
-    padding: 0;
-    border-radius: 0;
-    margin-top:1em;
-}
-#category-menu > div {
-    padding: 10px;
-}
-#category-menu > div:nth-child(2){
-    background-color: #F7F7F7;
-}
-#category-menu p{
-    margin-bottom: 5px;
-    padding-right: 2em; 
-}
-#category-menu h4 {
-    margin: 1em 0;
-    font-weight:bold;
-}
+
 #mobile-navbar {
     display: none;
 }
